--- a/requirements.ml_job.txt
+++ b/requirements.ml_job.txt
@@ -1,38 +1,38 @@
-# Core
-python-dotenv
-pika
-pymongo
-certifi
-numpy
-soundfile
+# Core dependencies
+python-dotenv==1.1.1
+pika==1.3.2
+pymongo==4.13.2
+certifi==2025.7.14
+numpy==2.2.6
+soundfile==0.13.1
 
 # Hugging Face Transformers & Torch ecosystem
-transformers
-torch
-torchaudio
-huggingface-hub
-safetensors # Dependency of transformers, good to keep if causing issues
-tokenizers # Dependency of transformers, good to keep if causing issues
-filelock # Often used by huggingface_hub for caching
-fsspec # Often used by huggingface_hub for caching
-tqdm # Transformers might use it for progress bars
+transformers==4.53.2
+torch==2.7.1+cu118
+torchaudio==2.7.1+cu118
+huggingface-hub==0.33.4
+safetensors==0.5.3
+tokenizers==0.21.2
+filelock==3.13.1
+fsspec==2024.6.1
+tqdm==4.67.1
 
 # Google Cloud & Auth
-google-api-core
-google-auth
-google-cloud-core
-google-cloud-storage
-google-crc32c
-google-resumable-media
-googleapis-common-protos
-proto-plus
-pyasn1
-pyasn1_modules
-rsa
-dnspython # For pymongo SRV records
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-core==2.4.3
+google-cloud-storage==3.2.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+proto-plus==1.26.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+rsa==4.9.1
+dnspython==2.7.0
 
 # Pydantic (for your schemas)
-pydantic
-pydantic_core
-annotated-types
-typing_extensions # Often pulled by pydantic or other modern libraries
+pydantic==2.11.7
+pydantic_core==2.33.2
+annotated-types==0.7.0
+typing_extensions==4.12.2
