--- a/Dockerfile.video_converter
+++ b/Dockerfile.video_converter
@@ -17,11 +17,18 @@ RUN pip install --no-cache-dir -r requirements.video_converter.txt
 ENV PYTHONPATH=/app
 
 # Copy the entire application source code.
-COPY . .
+#COPY . . #since we are not inclduing other files in dockerignore file
+
+# Copy config files
+COPY config.py .
+# Copy the app directory, explicitly including only the necessary sub-modules/files
+COPY app/schemas/ app/schemas/
+COPY app/services/ app/services/
+COPY monitoring/video_converter_consumer.py monitoring/
 
 # Set environment variables for temporary local paths within the container.
 ENV LOCAL_TEMP_VIDEO_DIR="/tmp/raw_videos"
 ENV LOCAL_TEMP_AUDIO_SEGMENTS_DIR="/tmp/extracted_audio"
 
 # Command to run the video converter consumer.
-CMD ["python", "monitoring/video_converter_consumer.py"]
+CMD ["python", "-u", "monitoring/video_converter_consumer.py"]
