--- a/Dockerfile.video_converter
+++ b/Dockerfile.video_converter
@@ -1,6 +1,6 @@
 FROM python:3.13.5-slim-bookworm
 
-WORKDIR /app
+WORKDIR /src
 
 # Install system dependencies: FFmpeg and FFprobe.
 RUN apt-get update && \
@@ -14,7 +14,7 @@ COPY requirements.video_converter.txt .
 RUN pip install --no-cache-dir -r requirements.video_converter.txt
 
 # --- ADD THIS LINE ---
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/src
 
 # Copy the entire application source code.
 #COPY . . #since we are not inclduing other files in dockerignore file
@@ -25,10 +25,13 @@ COPY config.py .
 COPY app/schemas/ app/schemas/
 COPY app/services/ app/services/
 COPY monitoring/video_converter_consumer.py monitoring/
+COPY secrets_loader.py . 
+COPY entrypoint.sh .  
 
 # Set environment variables for temporary local paths within the container.
 ENV LOCAL_TEMP_VIDEO_DIR="/tmp/raw_videos"
 ENV LOCAL_TEMP_AUDIO_SEGMENTS_DIR="/tmp/extracted_audio"
 
+ENTRYPOINT ["/src/entrypoint.sh"]
 # Command to run the video converter consumer.
 CMD ["python", "-u", "monitoring/video_converter_consumer.py"]
