--- a/requirements.ml_job.txt
+++ b/requirements.ml_job.txt
@@ -36,3 +36,9 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 annotated-types==0.7.0
 typing_extensions==4.12.2
+
+#google-secret-mananger
+google-cloud-secret-manager==2.24.0
+grpc-google-iam-v1==0.14.2
+grpcio==1.74.0
+grpcio-status==1.74.0
