WOrking code with secret manager implementation for ml service and video converter service

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env file for local development
 #GCP_PROJECT_ID="candidate-platform-449913" # Replace with your GCP Project ID (We are not using this anywhere)
-GCP_PROJECT_ID="465504632687"
+GCP_PROJECT_ID=candidate-platform-449913
 GCS_BUCKET_NAME=stag_metantz
 GCS_AUDIO_ROOT_PREFIX="shardul_test/test_extracted_audio/"
 GCS_RESULTS_PREFIX="shardul_test/test_json_result/"
@@ -17,8 +17,9 @@ GOOGLE_APPLICATION_CREDENTIALS=keyfile.json
 #RABBITMQ_USER=rabbit
 #RABBITMQ_PASS=84sxOIf4V0k8Rwp
 RABBITMQ_PROCESSING_QUEUE=INTERVIEW_PROCESSING_QUEUE_SHARDULTEST
-#RABBITMQ_VIDEO_READY_QUEUE=VIDEO_READY_QUEUE_SHARDULTEST #for testing
-RABBITMQ_VIDEO_READY_QUEUE=AUDIO_ANALYSIS_QUEUE
+RABBITMQ_VIDEO_READY_QUEUE=VIDEO_READY_QUEUE_SHARDULTEST
+#for testing
+#RABBITMQ_VIDEO_READY_QUEUE=AUDIO_ANALYSIS_QUEUE
 
 # Video Conversion Settings
 MIN_AUDIO_SEGMENT_LENGTH_MS=15000
@@ -27,11 +28,11 @@ MIN_SILENCE_LEN_S=3.0
 
 # Local temporary directories for video/audio conversion
 # IMPORTANT: Adjust these paths for your OS (e.g., C:\Temp\raw_videos on Windows)
-LOCAL_TEMP_VIDEO_DIR=/tmp/raw_videos
-LOCAL_TEMP_AUDIO_SEGMENTS_DIR=/tmp/extracted_audio
+LOCAL_TEMP_VIDEO_DIR=.\tmp\raw_videos
+LOCAL_TEMP_AUDIO_SEGMENTS_DIR=.\tmp.\extracted_audio
 
-ENV="stag"
-PROJECT_ID="465504632687"
+ENV=stag
+#PROJECT_ID="candidate-platform-449913"
 
 # MongoDB
 #MONGO_URI=mongodb+srv://sproutsAI:F1RR3fs0WjkW3cPg@cluster0.0dqfz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0       #USE This Locally
@@ -44,8 +45,8 @@ MONGO_COLLECTION_INTERVIEWS=Result
 # For testing, set to 1 or 3
 #GPU_TRIGGER_THRESHOLD=2   #Not using
 
-# Your model's batch size for segments (2 refs + 3 segments = 5 total)
-MAX_INTERVIEW_SEGMENTS_PER_MODEL_PASS=1 
+# Your model's batch size for segments (2 refs + '3' segments = 5 total)
+MAX_INTERVIEW_SEGMENTS_PER_MODEL_PASS=3 
 
 # Minimum segments for completeness check in Queue Monitor
 MIN_EXPECTED_INTERVIEW_SEGMENTS=1 
