--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,6 @@
 GCP_PROJECT_ID=candidate-platform-449913
 GCS_BUCKET_NAME=stag_metantz
 GCS_AUDIO_ROOT_PREFIX="shardul_test/test_extracted_audio/"
-GCS_RESULTS_PREFIX="shardul_test/test_json_result/"
 GCS_EMBEDDINGS_PREFIX="shardul_test/test_embeddings/"
 
 # Point this to your service account key file
@@ -11,9 +10,10 @@ GCS_EMBEDDINGS_PREFIX="shardul_test/test_embeddings/"
 # Or for relative path if key is in project root: GOOGLE_APPLICATION_CREDENTIALS=./service-account-key.json
 GOOGLE_APPLICATION_CREDENTIALS=keyfile.json
 
-RABBITMQ_PROCESSING_QUEUE=INTERVIEW_PROCESSING_QUEUE_SHARDULTEST
-RABBITMQ_VIDEO_READY_QUEUE=VIDEO_READY_QUEUE_SHARDULTEST2
-#for testing
+RABBITMQ_PROCESSING_QUEUE=INTERVIEW_PROCESSING_QUEUE_SHARDULTEST 
+#has audio files lined up for inferecing
+RABBITMQ_VIDEO_READY_QUEUE=VIDEO_READY_QUEUE_SHARDULTEST2 
+#has interview video folders lined up for audio segmentation
 #RABBITMQ_VIDEO_READY_QUEUE=AUDIO_ANALYSIS_QUEUE
 
 # Video Conversion Settings
@@ -28,7 +28,7 @@ LOCAL_TEMP_AUDIO_SEGMENTS_DIR=.\tmp\extracted_audio
 LOCAL_TEMP_EMBEDDINGS_DIR=.\tmp\embeddings
 
 ENV=stag
-FORCE_CPU_MODEL=True
+FORCE_CPU_MODEL=False
 
 # MongoDB
 
