changed env var of force_cpu to false. It'll use GPU

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ LOCAL_TEMP_AUDIO_SEGMENTS_DIR=.\tmp\extracted_audio
 LOCAL_TEMP_EMBEDDINGS_DIR=.\tmp\embeddings
 
 ENV=stag
-FORCE_CPU_MODEL=True
+FORCE_CPU_MODEL=False
 
 # MongoDB
 
