forced persistent connection with queue even after draining queue

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ GCS_EMBEDDINGS_PREFIX="shardul_test/test_embeddings/"
 # Or for relative path if key is in project root: GOOGLE_APPLICATION_CREDENTIALS=./service-account-key.json
 GOOGLE_APPLICATION_CREDENTIALS=keyfile.json
 
-RABBITMQ_PROCESSING_QUEUE=INTERVIEW_PROCESSING_QUEUE_SHARDULTEST
+RABBITMQ_PROCESSING_QUEUE=INTERVIEW_PROCESSING_QUEUE_SHARDULTEST2
 RABBITMQ_VIDEO_READY_QUEUE=VIDEO_READY_QUEUE_SHARDULTEST2
 #for testing
 #RABBITMQ_VIDEO_READY_QUEUE=AUDIO_ANALYSIS_QUEUE
@@ -28,7 +28,7 @@ LOCAL_TEMP_AUDIO_SEGMENTS_DIR=.\tmp\extracted_audio
 LOCAL_TEMP_EMBEDDINGS_DIR=.\tmp\embeddings
 
 ENV=stag
-FORCE_CPU_MODEL=False
+FORCE_CPU_MODEL=True
 
 # MongoDB
 
